Addex LaTeX support and fixed overflow not showing

--- a/src/app.css
+++ b/src/app.css
@@ -84,13 +84,7 @@ button:focus-visible {
   }
 }
 
-html {
-  height: 100%;
-}
-
 body {
-  height: 100%;
-  overflow: hidden;
   background-repeat: no-repeat;
   background-size: cover;
 }
